Fix: replace java.net.URL with java.net.URI in KafkaPageHandler (#98)
Closes #98

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>